--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
         "laravelcollective/html": "^6.3",
+        "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpspreadsheet": "^1.26",
