--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,7 @@
             "Database\\Seeders\\": "database/seeders/",
             "LaravelFrontendPresets\\ArgonPreset\\": "presets/argon/src",
             "MService\\Payment\\": "app/Http/Services/Momo/MService/Payment",
-            "VienThuong\\KiotVietClient\\": "app/Http/Services/kiotviet-master/src",
-            "Theciu\\Services\\VNPay": "app/Http/Services/VNPay/src"
+            "VienThuong\\KiotVietClient\\": "app/Http/Services/kiotviet-master/src"
         },
         "files": [
             "app/helpers/Helper.php"
