--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
         "laravelcollective/html": "^6.3",
+        "league/flysystem-aws-s3-v3": "^3.12",
         "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
         "mservice/payment": "*",
