--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,24 @@
-APP_NAME=Laravel
+APP_NAME='The CIU'
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:cMxxFzFNJaJ+93/oZo+875Ue2OgFbGEbNAEV40lrNaU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:4000
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -56,3 +57,56 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+IMAGE_STORAGE_DOMAIN=http://localhost:4000
+APP_TIMEZONE='Asia/Bangkok'
+
+
+DEV=development
+DEV_MOMO_ENDPOINT=https://test-payment.momo.vn
+DEV_ACCESS_KEY=
+DEV_PARTNER_CODE=
+DEV_SECRET_KEY=
+MOMO_IP=210.245.113.71,118.69.210.244,118.69.212.158
+
+
+PROD=production
+PROD_MOMO_ENDPOINT=https://payment.momo.vn
+PROD_ACCESS_KEY=
+PROD_PARTNER_CODE=
+PROD_SECRET_KEY=
+PROD_PRIVATE_KEY=
+PROD_PUBLIC_KEY=
+
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_URI=http://localhost:4000/auth/facebook/callback
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:4000/auth/google/callback
+
+
+KIOTVIET_CLIENT_ID=
+KIOTVIET_CLIENT_SECRET=
+KIOTVIET_RETAILER=
+
+
+VNP_HASH_SECRET=
+VNP_TMNCODE=
+VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNP_REFUND_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+VNP_IPN_URL=https://sandbox.vnpayment.vn/tryitnow/Home/VnPayIPN
+VNP_IP=113.160.92.202,113.52.45.78,116.97.245.130,42.118.107.252,113.20.97.250,203.171.19.146,103.220.87.4
+
+PROXY_KEY=
+PROXY_SALT=
+IMAGE_PROXY_DOMAIN=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET=
+AWS_DEFAULT_REGION=ap-east-1
+AWS_URL=https://minio.theciu.vn/theciu-beta
+AWS_ENDPOINT=http://103.186.101.230:9000
+FILESYSTEM_DISK=s3
