--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,12 @@
         "phpoffice/phpspreadsheet": "^1.26",
         "psr/simple-cache": "^2.0",
         "spatie/laravel-permission": "^5.7",
+        "spatie/laravel-responsecache": "^7.4",
         "spatie/laravel-sitemap": "^6.2",
         "yajra/laravel-datatables": "^9.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "mockery/mockery": "^1.4.4",
