--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,5 @@
 version: '3.9'
 services:
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - .:/var/www/html
-      - ./vendor:/var/www/html/vendor
-    depends_on:
-      - theciu
-    networks:
-      - sail
-
-  theciu:
-    build: .
-    ports:
-      - "8888:9000"
-    volumes:
-      - .:/var/www/html
-      - ./vendor:/var/www/html/vendor
-    depends_on:
-      - mariadb
-    networks:
-      - sail
-
   mariadb:
     image: 'mariadb:10'
     command: --max_allowed_packet=2048M
@@ -37,7 +12,7 @@ services:
       MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     volumes:
-      - 'sail-mariadb:/var/lib/mysql'
+      - '/home/theciu-data:/var/lib/mysql'
       - ./mariadb/init:/docker-entrypoint-initdb.d
     networks:
       - sail
@@ -49,7 +24,4 @@ services:
 networks:
   sail:
     driver: bridge
-volumes:
-  sail-mariadb:
-    driver: local
 
