--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: 'mariadb:10'
     command: --max_allowed_packet=2048M
     ports:
-      - '${FORWARD_DB_PORT:-3308}:3306'
+      - '127.0.0.1:${FORWARD_DB_PORT:-3308}:3306'
     environment:
       MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
       MYSQL_DATABASE: '${DB_DATABASE}'
@@ -14,14 +14,19 @@ services:
     volumes:
       - '/home/theciu-data:/var/lib/mysql'
       - ./mariadb/init:/docker-entrypoint-initdb.d
+    network_mode: bridge
     networks:
-      - sail
+      - network1
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
       retries: 3
       timeout: 5s
 
 networks:
-  sail:
-    driver: bridge
+  network1:
+     ipam:
+      config:
+        - subnet: 58.187.188.0/24
+          gateway: 58.187.188.1
+          ip_range: 58.187.188.20/32
 
