--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
   backup:
     image: tuanhm2703/google-drive-backup:latest
     volumes:
-      - 'credentials.json:/credentials.json'
+      - './credentials.json:/credentials.json'
       - '/home/theciu-data:/backup'
-      - 'crontab.txt:/crontab.txt'
-      - 'my-script.sh:/my-script.sh'
+      - './crontab.txt:/crontab.txt'
+      - './my-script.sh:/my-script.sh'
     command: tail -f /dev/null
