--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,14 @@ services:
     image: 'mariadb:10'
     command: --max_allowed_packet=2048M
     ports:
-      - '127.0.0.1:${FORWARD_DB_PORT:-3308}:3306'
+      - '${FORWARD_DB_PORT:-3308}:3306'
     environment:
       MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
       MYSQL_DATABASE: '${DB_DATABASE}'
       MYSQL_USER: '${DB_USERNAME}'
       MYSQL_PASSWORD: '${DB_PASSWORD}'
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      TZ: 'Asia/Ho_Chi_Minh'
     volumes:
       - '/home/theciu-data:/var/lib/mysql'
       - ./mariadb/init:/docker-entrypoint-initdb.d
