--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -1,12 +1,12 @@
 [supervisord]
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/html/artisan queue:work --queue=default,resizeImage,syncKiotStock --sleep=3 --tries=3 --max-time=3600
+command=php /var/www/html/artisan queue:work --env=queue --queue=default,resizeImage,syncKiotStock --sleep=3 --tries=3 --max-time=3600
 autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
-user=www-data
+user=root
 numprocs=6
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
