--- a/supervisor/Dockerfile
+++ b/supervisor/Dockerfile
@@ -3,7 +3,7 @@ FROM php:8.0-fpm-alpine
 RUN docker-php-ext-install pdo pdo_mysql
 
 RUN apk update && apk add --no-cache supervisor
-
+RUN apk add ffmpeg
 RUN mkdir -p "/var/www/html/storage/logs"
 
 COPY supervisord.conf /etc/supervisor/supervisord.conf
