--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "spatie/laravel-permission": "^5.7",
         "spatie/laravel-responsecache": "^7.4",
         "spatie/laravel-sitemap": "^6.2",
+        "spatie/schema-org": "^3.14",
         "yajra/laravel-datatables": "^9.0"
     },
     "require-dev": {
