--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: '3'
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - '81:80'
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - theciu-db
   mariadb:
     image: 'mariadb:10'
     command: --max_allowed_packet=2048M
