--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - theciu-db
+    restart: always
   mariadb:
     image: 'mariadb:10'
     command: --max_allowed_packet=2048M
