--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
 
     server {
         listen          80;
-        server_name     localhost;
+        server_name     beta.theciu.vn;
         root            /var/www/html/public;
 
         index           index.php;
@@ -33,7 +33,7 @@ http {
         }
 
         location ~ \.php$ {
-            fastcgi_pass    theciu:9000;
+            fastcgi_pass    theciu-beta:9000;
             fastcgi_index   index.php;
             fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include         fastcgi_params;
@@ -43,4 +43,13 @@ http {
             deny            all;
         }
     }
+    #  server {
+    #     listen          80;
+    #     server_name theciu.ryhand.com;
+    #     location / {
+    #         proxy_pass http://theciu-nextjs:3000;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #     }
+    # }
 }
