--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "edsdk/flmngr-server-php": "^1.5",
         "doctrine/dbal": "^3.6",
+        "edsdk/flmngr-server-php": "^1.5",
         "eusonlito/laravel-meta": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "haistar/shopee-php-sdk": "^3.1",
         "kreait/firebase-php": "^6.9",
         "laravel-frontend-presets/argon": "^2.0",
         "laravel/framework": "^9.19",
+        "laravel/horizon": "^5.24",
         "laravel/sail": "^1.16",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
@@ -28,6 +29,7 @@
         "php-ffmpeg/php-ffmpeg": "^1.1",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpspreadsheet": "^1.26",
+        "predis/predis": "^2.2",
         "psr/simple-cache": "^2.0",
         "spatie/laravel-permission": "^5.7",
         "spatie/laravel-responsecache": "^7.4",
